--- a/resources/js/sass/main.sass
+++ b/resources/js/sass/main.sass
@@ -244,6 +244,7 @@ header
         border: none
         background: #fff1da !important
         cursor: pointer
+        font-family: Montserrat
 
     .flex_main
         display: flex
